# flingo

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: ci-test.yml  deploy.yml
doc/: index.rst
examples/multi_car/: car_multi.lp
flingo/: __main__.py  translator.py
src/flingo/: __init__.py  __main__.py  parsing.py  translator.py
src/flingo/utils/: parser.py
tests/: __init__.py
